--- a/create/embeds/rendering/index.html
+++ b/create/embeds/rendering/index.html
@@ -1,13 +1,16 @@
-
-
-
-
 <!DOCTYPE html>
 <html>
 <head>
     <meta property="og:title" content="Rendering Problems With Create">
-    <meta property="og:description" content="Hello
-    How are you">
+    <meta property="og:description" content="Are you using shaders?
+    Yes - https://github.com/K2568/K2s-Lists/blob/main/create/performance/readme.md
+
+    No:
+    Try switching through flywheel backends:
+    /flywheel backend instancing
+    /flywheel backend indirect (batching on beloc C6)
+    /flywheel backend off
+    See if any of these fix the problem">
 </head>
 <body>
 
