--- a/create/embeds/rendering/index.html
+++ b/create/embeds/rendering/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta property="og:title" content="Rendering Problems With Create">
     <meta property="og:description" content="Are you using shaders?
-    Yes - https://github.com/K2568/K2s-Lists/blob/main/create/performance/readme.md
+    Yes - Click the title
 
     No:
     Try switching through flywheel backends:
@@ -14,7 +14,12 @@
 </head>
 <body>
 
-D
+    Redirecting to the main site
+    <script type="text/javascript">
+      setTimeout(function() {
+        window.location.replace("https://k2568.github.io/K2s-Lists/create/performance/readme.md");
+      }, 1000);
+    </script>
 
 </body>
 </html> 
