--- a/create/embeds/rendering/index.html
+++ b/create/embeds/rendering/index.html
@@ -17,7 +17,7 @@
     Redirecting to the main site
     <script type="text/javascript">
       setTimeout(function() {
-        window.location.replace("https://k2568.github.io/K2s-Lists/create/performance/readme.md");
+        window.location.replace("https://github.com/K2568/K2s-Lists/blob/main/create/performance/readme.md");
       }, 1000);
     </script>
 
