--- a/create/embeds/rendering/index.html
+++ b/create/embeds/rendering/index.html
@@ -8,7 +8,7 @@
     No:
     Try switching through flywheel backends:
     /flywheel backend instancing
-    /flywheel backend indirect (batching on beloc C6)
+    /flywheel backend indirect (batching on below C6)
     /flywheel backend off
     See if any of these fix the problem">
 </head>
@@ -18,7 +18,7 @@
     <script type="text/javascript">
       setTimeout(function() {
         window.location.replace("https://github.com/K2568/K2s-Lists/blob/main/create/performance/readme.md");
-      }, 1000);
+      }, 500);
     </script>
 
 </body>
