--- a/create/embeds/binarysearch/index.html
+++ b/create/embeds/binarysearch/index.html
@@ -5,16 +5,7 @@
     <meta property="og:description" content="1. Disable everything other than create and its addons in your modpack.
     1.1. If it still crashes keep the other mods off then do binary search on the create addons
     1.2. If it doesn't crash then do binary search on the other mods
-
-    2. Binary search:
-       Remove half of the existing things, and put them aside.
-       Run the program / game.
-       Does the issue still exist?
-       If YES: Repeat from step 1 with the current things.
-       IF NO: Swap out the current things with the ones set aside, and repeat from step 1.
-       Repeat this process until the problematic thing/s have been found.
-
-    Credit to the NeoForge Discord for the section 2 instructions.">
+    Get binary search instructions with !!binary-search">
 </head>
 <body>
 
