Add iris flywheel compat backend

--- a/create/embeds/rendering/index.html
+++ b/create/embeds/rendering/index.html
@@ -10,6 +10,7 @@
     /flywheel backend instancing
     /flywheel backend indirect (batching on below C6)
     /flywheel backend off
+    /flywheel backend irisflw:iris_instancing (If you have Iris Flywheel Compat)
     See if any of these fix the problem">
 </head>
 <body>
