--- a/create/embeds/rendering/index.html
+++ b/create/embeds/rendering/index.html
@@ -4,6 +4,7 @@
     <meta property="og:title" content="Rendering Problems With Create">
     <meta property="og:description" content="Are you using shaders?
     Yes - Click the title
+    If issues persist refer to the No section.
 
     No:
     Try switching through flywheel backends:
