--- a/create/embeds/snr/index.html
+++ b/create/embeds/snr/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta property="og:title" content="Mom can we have SnR 1.21.1? No we have SnR 1.21.1 at home">
+    <meta property="og:title" content="Mom can we have SnR 1.21.1? No we have SnR 1.21.1 at home!">
     <meta property="og:description" content="SnR 1.21.1 at home:
+    
     Alternate bogeys:
     Create: Blocks & Bogies
     
